fix: change alignemnt of overview

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -81,7 +81,7 @@ body {
 	
 	
 	h1 {
-		font-size: 4.8rem;
+		font-size: 4rem;
 		line-height: 1;
 	}
 	
@@ -121,7 +121,7 @@ body {
 	
 	
 	h1 {
-		font-size: 4rem;
+		font-size: 3.5rem;
 		line-height: 1;
 	}
 	
